# Bezier

./: CMakeLists.txt  main.cpp
cmake/: depend.cmake
include/: bezier.hpp  curve.hpp  utils.hpp
src/: utils.cpp
